renamed fonts to comply with SIL license

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,104 +1,140 @@
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-black-webfont.eot');
-    src: url('../fonts/sourcesanspro-black-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-black-webfont.woff') format('woff'), url('../fonts/sourcesanspro-black-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-black-webfont.svg#source_sans_problack') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-black-webfont.eot');
+    src: url('../fonts/ssp-black-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-black-webfont.woff') format('woff'),
+         url('../fonts/ssp-black-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-black-webfont.svg#sspblack') format('svg');
     font-weight: 900;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-blackit-webfont.eot');
-    src: url('../fonts/sourcesanspro-blackit-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-blackit-webfont.woff') format('woff'), url('../fonts/sourcesanspro-blackit-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-blackit-webfont.svg#source_sans_problack_italic') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-blackit-webfont.eot');
+    src: url('../fonts/ssp-blackit-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-blackit-webfont.woff') format('woff'),
+         url('../fonts/ssp-blackit-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-blackit-webfont.svg#sspblack_italic') format('svg');
     font-weight: 900;
     font-style: italic;
 
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-bold-webfont.eot');
-    src: url('../fonts/sourcesanspro-bold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-bold-webfont.woff') format('woff'), url('../fonts/sourcesanspro-bold-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-bold-webfont.svg#source_sans_probold') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-bold-webfont.eot');
+    src: url('../fonts/ssp-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-bold-webfont.woff') format('woff'),
+         url('../fonts/ssp-bold-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-bold-webfont.svg#sspbold') format('svg');
     font-weight: 700;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-boldit-webfont.eot');
-    src: url('../fonts/sourcesanspro-boldit-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-boldit-webfont.woff') format('woff'), url('../fonts/sourcesanspro-boldit-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-boldit-webfont.svg#source_sans_probold_italic') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-boldit-webfont.eot');
+    src: url('../fonts/ssp-boldit-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-boldit-webfont.woff') format('woff'),
+         url('../fonts/ssp-boldit-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-boldit-webfont.svg#sspbold_italic') format('svg');
     font-weight: 700;
     font-style: italic;
 
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-extralight-webfont.eot');
-    src: url('../fonts/sourcesanspro-extralight-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-extralight-webfont.woff') format('woff'), url('../fonts/sourcesanspro-extralight-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-extralight-webfont.svg#source_sans_proextralight') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-extralight-webfont.eot');
+    src: url('../fonts/ssp-extralight-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-extralight-webfont.woff') format('woff'),
+         url('../fonts/ssp-extralight-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-extralight-webfont.svg#sspextralight') format('svg');
     font-weight: 100;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-extralightit-webfont.eot');
-    src: url('../fonts/sourcesanspro-extralightit-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-extralightit-webfont.woff') format('woff'), url('../fonts/sourcesanspro-extralightit-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-extralightit-webfont.svg#source_sans_proXLtIt') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-extralightit-webfont.eot');
+    src: url('../fonts/ssp-extralightit-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-extralightit-webfont.woff') format('woff'),
+         url('../fonts/ssp-extralightit-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-extralightit-webfont.svg#sspXLtIt') format('svg');
     font-weight: 100;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-it-webfont.eot');
-    src: url('../fonts/sourcesanspro-it-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-it-webfont.woff') format('woff'), url('../fonts/sourcesanspro-it-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-it-webfont.svg#source_sans_proitalic') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-it-webfont.eot');
+    src: url('../fonts/ssp-it-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-it-webfont.woff') format('woff'),
+         url('../fonts/ssp-it-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-it-webfont.svg#sspitalic') format('svg');
     font-weight: normal;
     font-style: italic;
 
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-light-webfont.eot');
-    src: url('../fonts/sourcesanspro-light-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-light-webfont.woff') format('woff'), url('../fonts/sourcesanspro-light-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-light-webfont.svg#source_sans_prolight') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-light-webfont.eot');
+    src: url('../fonts/ssp-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-light-webfont.woff') format('woff'),
+         url('../fonts/ssp-light-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-light-webfont.svg#ssplight') format('svg');
     font-weight: 200;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-lightit-webfont.eot');
-    src: url('../fonts/sourcesanspro-lightit-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-lightit-webfont.woff') format('woff'), url('../fonts/sourcesanspro-lightit-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-lightit-webfont.svg#source_sans_prolight_italic') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-lightit-webfont.eot');
+    src: url('../fonts/ssp-lightit-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-lightit-webfont.woff') format('woff'),
+         url('../fonts/ssp-lightit-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-lightit-webfont.svg#ssplight_italic') format('svg');
     font-weight: 200;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-regular-webfont.eot');
-    src: url('../fonts/sourcesanspro-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-regular-webfont.woff') format('woff'), url('../fonts/sourcesanspro-regular-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-regular-webfont.svg#source_sans_proregular') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-regular-webfont.eot');
+    src: url('../fonts/ssp-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-regular-webfont.woff') format('woff'),
+         url('../fonts/ssp-regular-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-regular-webfont.svg#sspregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-semibold-webfont.eot');
-    src: url('../fonts/sourcesanspro-semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-semibold-webfont.woff') format('woff'), url('../fonts/sourcesanspro-semibold-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-semibold-webfont.svg#source_sans_prosemibold') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-semibold-webfont.eot');
+    src: url('../fonts/ssp-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-semibold-webfont.woff') format('woff'),
+         url('../fonts/ssp-semibold-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-semibold-webfont.svg#sspsemibold') format('svg');
     font-weight: 500;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'source_sans_pro';
-    src: url('../fonts/sourcesanspro-semiboldit-webfont.eot');
-    src: url('../fonts/sourcesanspro-semiboldit-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcesanspro-semiboldit-webfont.woff') format('woff'), url('../fonts/sourcesanspro-semiboldit-webfont.ttf') format('truetype'), url('../fonts/sourcesanspro-semiboldit-webfont.svg#source_sans_proSBdIt') format('svg');
+    font-family: 'ssp';
+    src: url('../fonts/ssp-semiboldit-webfont.eot');
+    src: url('../fonts/ssp-semiboldit-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ssp-semiboldit-webfont.woff') format('woff'),
+         url('../fonts/ssp-semiboldit-webfont.ttf') format('truetype'),
+         url('../fonts/ssp-semiboldit-webfont.svg#sspSBdIt') format('svg');
     font-weight: 500;
     font-style: italic;
 
