--- a/css/main.css
+++ b/css/main.css
@@ -4,5 +4,5 @@ body {
     font-size: 400px;
     text-align: center;
     padding-top: 40px;
-    font-family: "source_sans_pro", Helvetica, Arial, sans-serif;
+    font-family: "ssp", Helvetica, Arial, sans-serif;
 }
